--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@types/cors": "^2.8.14",
+    "@types/express": "^4.17.17",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.5.0",
     "ts-node-dev": "^2.0.0"
   }
-  
 }
